# d3

./: .gitmodules  README.md
d3_settings/: Cargo.toml
d3_settings/src/: config.rs  main.rs  view.rs
d3_settings/src/config/: mod.rs
d3_settings/test_assets/: i3_config
